--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -64,9 +64,6 @@ footer {
     </header>
 
     <nav>
-        <div class="card">
-            <a href="/compose" class="btn btn-primary">Compose Message</a>
-        </div>
         <!--Default folders-->
         <div th:insert="components/folder-list :: folder-list (panelName = 'Folders', folders=${defaultFolders})"></div>
         <!--User folders-->
@@ -75,35 +72,27 @@ footer {
 
     <main>
         <div class="card">
-            <div class="card-header">View Email</div>
-            <div class="card-body">
-                <dl>
-                <div class="mb-3">
-                    <dt class="form-label">From</dt>
-                    <dd th:text="${email.from}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">To</dt>
-                    <dd th:text="${toIds}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">Subject</dt>
-                    <dd th:text="${email.subject}"></dd>
-                </div>
-                <div class="mb-3">
-                    <dt class="form-label">Body</dt>
-                    <dd th:text="${email.body}"></dd>
-                </div>
-                </dl>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <a class="btn btn-primary me-md-2"
-                       th:href="@{'/compose?to=' + ${email.from}}"
-                       type="button">Reply</a>
-                    <a class="btn btn-primary"
-                       th:href="@{'/compose?to=' + ${email.from}} + ',' + ${toIds}"
-                       type="button">Reply All</a>
-                </div>
-            </div>
+            <div class="card-header">Create New Email</div>
+            <dl class="card-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="toIds" class="form-label">To</label>
+                        <input type="text"
+                               th:value="${toIds}"
+                               class="form-control" id="toIds">
+                        <div id="toIdHelp" class="form-text">Enter comma separated GitHub IDs of your recipients</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="subject">
+                    </div>
+                    <div class="mb-3">
+                        <label for="body" class="form-label">Body</label>
+                        <textarea rows="10" type="text" class="form-control" id="body"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </dl>
         </div>
     </main>
 
