--- a/src/main/resources/templates/email-page.html
+++ b/src/main/resources/templates/email-page.html
@@ -19,6 +19,7 @@
     <style>
         .container {
   display: grid;
+  margin-top: 20px;
 
   grid-template-areas:
     "header header header"
@@ -59,8 +60,11 @@ footer {
 </head>
 <body>
 <div class="container">
+    <!--Can be extracted as component-->
     <header>
-        <h1>Hello, Name</h1>
+        <h3>Inbox App</h3>
+        <small class="text-muted">Welcome, </small>
+        <small class="text-muted" th:text="${userName}"></small>
     </header>
 
     <nav>
