Add threads to reply functionality

--- a/src/main/resources/templates/email-page.html
+++ b/src/main/resources/templates/email-page.html
@@ -54,8 +54,9 @@ footer {
   grid-area: footer;
 }
 
-
-
+.body-text {
+  white-space: pre-wrap;
+}
     </style>
 </head>
 <body>
@@ -96,15 +97,15 @@ footer {
                 </div>
                 <div class="mb-3">
                     <dt class="form-label">Body</dt>
-                    <dd th:text="${email.body}"></dd>
+                    <dd class="body-text" th:text="${email.body}"></dd>
                 </div>
                 </dl>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <a class="btn btn-primary me-md-2"
-                       th:href="@{'/compose?to=' + ${email.from}}"
+                       th:href="@{'/compose?to=' + ${email.from} + '&id=' + ${email.id}}"
                        type="button">Reply</a>
                     <a class="btn btn-primary"
-                       th:href="@{'/compose?to=' + ${email.from}} + ',' + ${toIds}"
+                       th:href="@{'/compose?to=' + ${email.from} + ',' + ${toIds}  + '&id=' + ${email.id}}"
                        type="button">Reply All</a>
                 </div>
             </div>
