--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -89,11 +89,11 @@ footer {
                     </div>
                     <div class="mb-3">
                         <label for="subject" class="form-label">Subject</label>
-                        <input type="text" class="form-control" name="subject" id="subject">
+                        <input type="text" th:value="${subject}" class="form-control" name="subject" id="subject">
                     </div>
                     <div class="mb-3">
                         <label for="body" class="form-label">Body</label>
-                        <textarea rows="10" type="text" class="form-control" name="body" id="body"></textarea>
+                        <textarea rows="10" type="text" th:text="${body}" class="form-control" name="body" id="body"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
